RESOLVED FIXED25137
When animations restart after going Back to a page, animation-delay is ignored
https://bugs.webkit.org/show_bug.cgi?id=25137
Summary When animations restart after going Back to a page, animation-delay is ignored
Chris Marrin
Reported 2009-04-10 16:24:01 PDT
When going Back to a page that has animations running, the animations are re-started weirdly, not taking delay into account. Steps: 1. Load the attached page 2. Reload 3. See that boxes that should be delayed are not
Attachments
Test case showing bug (1.72 KB, text/html)
2009-04-10 16:25 PDT, Chris Marrin
no flags
Patch (1.25 KB, patch)
2009-04-10 17:16 PDT, Chris Marrin
simon.fraser: review+
Chris Marrin
Comment 1 2009-04-10 16:25:09 PDT
Created attachment 29408 [details] Test case showing bug
Chris Marrin
Comment 2 2009-04-10 17:16:12 PDT
Simon Fraser (smfr)
Comment 3 2009-04-10 17:18:03 PDT
Comment on attachment 29413 [details] Patch r=me, but please say in the changelog why there's no testcase.
Chris Marrin
Comment 4 2009-04-10 17:26:29 PDT
Sending WebCore/ChangeLog Sending WebCore/dom/Document.cpp Transmitting file data .. Committed revision 42415.
Note You need to log in before you can comment on or make changes to this bug.