        Fixed https://bugs.webkit.org/show_bug.cgi?id=25137

If we reload, the animation controller sticks around and has
        a stale animation time. So the needed delay is computed wrong.
        I added a reset of the animation timer on load.

        I did not do a test case because this only happens on reload so I
        couldn't make an automated test. I tried using an iframe and using
        reload() but that doesn't tickle the bug.



Canonical link: https://commits.webkit.org/34469@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42415 268f45cc-cd09-0410-ab3c-d52691b4dbfc